remembered different way to change value in column, updated 2000 and 2001 to it, started 1999

--- a/Data/Monarchs_1999_cleanup.ipynb
+++ b/Data/Monarchs_1999_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs2000.db\")"
+    "db = sqlite3.connect(\"Monarchs1999.db\")"
    ]
   },
   {
@@ -45,10 +45,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"2000 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"1999 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
-    "df.to_sql(\"monarchs2000\", db, if_exists=\"replace\")\n",
+    "df.to_sql(\"monarchs1999\", db, if_exists=\"replace\")\n",
     "\n",
     "os.getcwd()\n",
     "\n"
@@ -274,7 +274,7 @@
     }
    ],
    "source": [
-    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs2000\")', db)\n",
+    "data_type = pd.read_sql('SELECT * FROM PRAGMA_TABLE_INFO(\"monarchs1999\")', db)\n",
     "data_type"
    ]
   },
@@ -913,7 +913,6 @@
    "source": [
     "df3 = df['Report Location'].str.split(', ', expand=True)\n",
     "df3.columns = ['report_city', 'Reported State', 'Reported Country']\n",
-    "#add_usa = df3['Reported Country'].fillna('USA') decided to use .loc\n",
     "df3\n"
    ]
   },
@@ -1361,7 +1360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_csv(\"Monarchs2000.csv\")"
+    "#new_table.to_csv(\"Monarchs1999.csv\")"
    ]
   }
  ],
