--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "[1962 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
        "[1962 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-eddbe0992302>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf7\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf7\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'state_date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tag_date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'city_date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tag_city'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf8\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf7\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Tag No.'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Tagged State'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Tagged Date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Reported State'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Reported Country'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Reported Date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Miles'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnew_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf8\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df7 = pd.concat([df, df2, df3, df4, df5], axis=1)\n",
+    "df7.drop(['state_date', 'tag_date', 'city_date', 'tag_city'], axis=1, inplace=True)\n",
+    "df8 = df7[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
+    "new_table = df8.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change variables in Reported Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -918,50 +949,50 @@
        "      <th>0</th>\n",
        "      <td>AAD929</td>\n",
        "      <td>MA</td>\n",
-       "      <td>09-12-01</td>\n",
+       "      <td>2001-09-12</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>02-11-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-11</td>\n",
        "      <td>2344.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AAD844</td>\n",
        "      <td>MA</td>\n",
-       "      <td>09-12-01</td>\n",
+       "      <td>2001-09-12</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>03-08-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-08</td>\n",
        "      <td>2343.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AIO261</td>\n",
        "      <td>NY</td>\n",
-       "      <td>09-24-01</td>\n",
+       "      <td>2001-09-24</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>03-13-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-13</td>\n",
        "      <td>2329.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AAU820</td>\n",
        "      <td>NY</td>\n",
-       "      <td>08-29-01</td>\n",
+       "      <td>2001-08-29</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>02-27-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-27</td>\n",
        "      <td>2315.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ABG581</td>\n",
        "      <td>NY</td>\n",
-       "      <td>09-16-01</td>\n",
+       "      <td>2001-09-16</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>03-13-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-13</td>\n",
        "      <td>2303.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -978,50 +1009,50 @@
        "      <th>1957</th>\n",
        "      <td>ADE225</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>MN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>10-06-01</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2001-10-06</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1958</th>\n",
        "      <td>ABW153</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>03-08-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-03-08</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1959</th>\n",
        "      <td>AJA875</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>02-26-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-26</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1960</th>\n",
        "      <td>ADR234</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>MICH</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>02-26-02</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>2002-02-26</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1961</th>\n",
        "      <td>AAG669</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>CT</td>\n",
-       "      <td>None</td>\n",
-       "      <td>09-16-01</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2001-09-16</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1031,50 +1062,48 @@
       ],
       "text/plain": [
        "     Tag No. Tagged State Tagged Date Reported State Reported Country  \\\n",
-       "0     AAD929           MA    09-12-01           MICH               MX   \n",
-       "1     AAD844           MA    09-12-01           MICH               MX   \n",
-       "2     AIO261           NY    09-24-01           MICH               MX   \n",
-       "3     AAU820           NY    08-29-01           MICH               MX   \n",
-       "4     ABG581           NY    09-16-01           MICH               MX   \n",
+       "0     AAD929           MA  2001-09-12           MICH           MEXICO   \n",
+       "1     AAD844           MA  2001-09-12           MICH           MEXICO   \n",
+       "2     AIO261           NY  2001-09-24           MICH           MEXICO   \n",
+       "3     AAU820           NY  2001-08-29           MICH           MEXICO   \n",
+       "4     ABG581           NY  2001-09-16           MICH           MEXICO   \n",
        "...      ...          ...         ...            ...              ...   \n",
-       "1957  ADE225          NaN         NaN             MN             None   \n",
-       "1958  ABW153          NaN         NaN           MICH               MX   \n",
-       "1959  AJA875          NaN         NaN           MICH               MX   \n",
-       "1960  ADR234          NaN         NaN           MICH               MX   \n",
-       "1961  AAG669          NaN         NaN             CT             None   \n",
+       "1957  ADE225          NaN         NaT             MN              USA   \n",
+       "1958  ABW153          NaN         NaT           MICH           MEXICO   \n",
+       "1959  AJA875          NaN         NaT           MICH           MEXICO   \n",
+       "1960  ADR234          NaN         NaT           MICH           MEXICO   \n",
+       "1961  AAG669          NaN         NaT             CT              USA   \n",
        "\n",
        "     Reported Date   Miles  \n",
-       "0         02-11-02  2344.0  \n",
-       "1         03-08-02  2343.0  \n",
-       "2         03-13-02  2329.0  \n",
-       "3         02-27-02  2315.0  \n",
-       "4         03-13-02  2303.0  \n",
+       "0       2002-02-11  2344.0  \n",
+       "1       2002-03-08  2343.0  \n",
+       "2       2002-03-13  2329.0  \n",
+       "3       2002-02-27  2315.0  \n",
+       "4       2002-03-13  2303.0  \n",
        "...            ...     ...  \n",
-       "1957      10-06-01     NaN  \n",
-       "1958      03-08-02     NaN  \n",
-       "1959      02-26-02     NaN  \n",
-       "1960      02-26-02     NaN  \n",
-       "1961      09-16-01     NaN  \n",
+       "1957    2001-10-06     NaN  \n",
+       "1958    2002-03-08     NaN  \n",
+       "1959    2002-02-26     NaN  \n",
+       "1960    2002-02-26     NaN  \n",
+       "1961    2001-09-16     NaN  \n",
        "\n",
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df7 = pd.concat([df, df2, df3, df4, df5], axis=1)\n",
-    "df7.drop(['state_date', 'tag_date', 'city_date', 'tag_city'], axis=1, inplace=True)\n",
-    "df8 = df7[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
-    "new_table = df8.copy()\n",
+    "new_table.loc[new_table['Reported Country'] == 'MX', 'Reported Country'] = 'MEXICO'\n",
+    "new_table.loc[new_table['Reported Country'].isnull(), 'Reported Country'] = 'USA'\n",
     "new_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1119,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
