Finished '99, started '98, finetuned '00 & '01

--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -635,8 +635,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Tagged State</th>\n",
-       "      <th>Tagged Date</th>\n",
+       "      <th>Tag State</th>\n",
+       "      <th>Tag Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -701,18 +701,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     Tagged State Tagged Date\n",
-       "0              MA    09-12-01\n",
-       "1              MA    09-12-01\n",
-       "2              NY    09-24-01\n",
-       "3              NY    08-29-01\n",
-       "4              NY    09-16-01\n",
-       "...           ...         ...\n",
-       "1957          NaN         NaN\n",
-       "1958          NaN         NaN\n",
-       "1959          NaN         NaN\n",
-       "1960          NaN         NaN\n",
-       "1961          NaN         NaN\n",
+       "     Tag State  Tag Date\n",
+       "0           MA  09-12-01\n",
+       "1           MA  09-12-01\n",
+       "2           NY  09-24-01\n",
+       "3           NY  08-29-01\n",
+       "4           NY  09-16-01\n",
+       "...        ...       ...\n",
+       "1957       NaN       NaN\n",
+       "1958       NaN       NaN\n",
+       "1959       NaN       NaN\n",
+       "1960       NaN       NaN\n",
+       "1961       NaN       NaN\n",
        "\n",
        "[1962 rows x 2 columns]"
       ]
@@ -726,7 +726,7 @@
     "df2 = df['tag_date'].str.split(', ', expand=True)\n",
     "df3 = df2[1].str.split(' ', expand=True)\n",
     "df2.columns = ['tag_city', 'state_date']\n",
-    "df3.columns = ['Tagged State', 'Tagged Date']\n",
+    "df3.columns = ['Tag State', 'Tag Date']\n",
     "df3\n"
    ]
   },
@@ -764,8 +764,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>city_date</th>\n",
-       "      <th>Reported State</th>\n",
-       "      <th>Reported Country</th>\n",
+       "      <th>Report State</th>\n",
+       "      <th>Report Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -841,18 +841,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                    city_date Reported State Reported Country\n",
-       "0         02-11-02 El Rosario           MICH               MX\n",
-       "1     03-08-02 Sierra Chincua           MICH               MX\n",
-       "2         03-13-02 El Rosario           MICH               MX\n",
-       "3         02-27-02 El Rosario           MICH               MX\n",
-       "4         03-13-02 El Rosario           MICH               MX\n",
-       "...                       ...            ...              ...\n",
-       "1957       10-06-01 Lakeville             MN             None\n",
-       "1958  03-08-02 Sierra Chincua           MICH               MX\n",
-       "1959      02-26-02 El Rosario           MICH               MX\n",
-       "1960      02-26-02 El Rosario           MICH               MX\n",
-       "1961        09-16-01 Guilford             CT             None\n",
+       "                    city_date Report State Report Country\n",
+       "0         02-11-02 El Rosario         MICH             MX\n",
+       "1     03-08-02 Sierra Chincua         MICH             MX\n",
+       "2         03-13-02 El Rosario         MICH             MX\n",
+       "3         02-27-02 El Rosario         MICH             MX\n",
+       "4         03-13-02 El Rosario         MICH             MX\n",
+       "...                       ...          ...            ...\n",
+       "1957       10-06-01 Lakeville           MN           None\n",
+       "1958  03-08-02 Sierra Chincua         MICH             MX\n",
+       "1959      02-26-02 El Rosario         MICH             MX\n",
+       "1960      02-26-02 El Rosario         MICH             MX\n",
+       "1961        09-16-01 Guilford           CT           None\n",
        "\n",
        "[1962 rows x 3 columns]"
       ]
@@ -866,8 +866,8 @@
     "df4 = df['report_date'].str.split(', ', expand=True)\n",
     "df5 = df4[0].str.extract('(\\d\\d-\\d\\d-\\d\\d)', expand=True)\n",
     "#df6 = df4[0].str.replace('(\\d\\d-\\d\\d-\\d\\d)', '') - to seperate date from city. decided not to use city\n",
-    "df4.columns = ['city_date', 'Reported State', 'Reported Country']\n",
-    "df5.columns = ['Reported Date']\n",
+    "df4.columns = ['city_date', 'Report State', 'Report Country']\n",
+    "df5.columns = ['Report Date']\n",
     "df4"
    ]
   },
@@ -880,25 +880,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-eddbe0992302>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf7\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf7\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'state_date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tag_date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'city_date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'tag_city'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf8\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf7\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Tag No.'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Tagged State'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Tagged Date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Reported State'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Reported Country'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Reported Date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Miles'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnew_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf8\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df2' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df7 = pd.concat([df, df2, df3, df4, df5], axis=1)\n",
     "df7.drop(['state_date', 'tag_date', 'city_date', 'tag_city'], axis=1, inplace=True)\n",
-    "df8 = df7[['Tag No.','Tagged State', 'Tagged Date', 'Reported State', 'Reported Country', 'Reported Date', 'Miles']]\n",
+    "df8 = df7[['Tag No.','Tag State', 'Tag Date', 'Report State', 'Report Country', 'Report Date', 'Miles']]\n",
     "new_table = df8.copy()"
    ]
   },
@@ -906,12 +894,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Change variables in Reported Column"
+    "### Rename values in Report Country column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -936,11 +924,203 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Tag No.</th>\n",
-       "      <th>Tagged State</th>\n",
-       "      <th>Tagged Date</th>\n",
-       "      <th>Reported State</th>\n",
-       "      <th>Reported Country</th>\n",
-       "      <th>Reported Date</th>\n",
+       "      <th>Tag State</th>\n",
+       "      <th>Tag Date</th>\n",
+       "      <th>Report State</th>\n",
+       "      <th>Report Country</th>\n",
+       "      <th>Report Date</th>\n",
+       "      <th>Miles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAD929</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>09-12-01</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>02-11-02</td>\n",
+       "      <td>2344.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAD844</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>09-12-01</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>03-08-02</td>\n",
+       "      <td>2343.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AIO261</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>09-24-01</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>03-13-02</td>\n",
+       "      <td>2329.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAU820</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>08-29-01</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>02-27-02</td>\n",
+       "      <td>2315.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABG581</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>09-16-01</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>03-13-02</td>\n",
+       "      <td>2303.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1957</th>\n",
+       "      <td>ADE225</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>10-06-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1958</th>\n",
+       "      <td>ABW153</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>03-08-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959</th>\n",
+       "      <td>AJA875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>02-26-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>ADR234</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MICH</td>\n",
+       "      <td>MEXICO</td>\n",
+       "      <td>02-26-02</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961</th>\n",
+       "      <td>AAG669</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>09-16-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1962 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Tag No. Tag State  Tag Date Report State Report Country Report Date  \\\n",
+       "0     AAD929        MA  09-12-01         MICH         MEXICO    02-11-02   \n",
+       "1     AAD844        MA  09-12-01         MICH         MEXICO    03-08-02   \n",
+       "2     AIO261        NY  09-24-01         MICH         MEXICO    03-13-02   \n",
+       "3     AAU820        NY  08-29-01         MICH         MEXICO    02-27-02   \n",
+       "4     ABG581        NY  09-16-01         MICH         MEXICO    03-13-02   \n",
+       "...      ...       ...       ...          ...            ...         ...   \n",
+       "1957  ADE225       NaN       NaN           MN            USA    10-06-01   \n",
+       "1958  ABW153       NaN       NaN         MICH         MEXICO    03-08-02   \n",
+       "1959  AJA875       NaN       NaN         MICH         MEXICO    02-26-02   \n",
+       "1960  ADR234       NaN       NaN         MICH         MEXICO    02-26-02   \n",
+       "1961  AAG669       NaN       NaN           CT            USA    09-16-01   \n",
+       "\n",
+       "       Miles  \n",
+       "0     2344.0  \n",
+       "1     2343.0  \n",
+       "2     2329.0  \n",
+       "3     2315.0  \n",
+       "4     2303.0  \n",
+       "...      ...  \n",
+       "1957     NaN  \n",
+       "1958     NaN  \n",
+       "1959     NaN  \n",
+       "1960     NaN  \n",
+       "1961     NaN  \n",
+       "\n",
+       "[1962 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_table.loc[new_table['Report Country'] == 'MX', 'Report Country'] = 'MEXICO'\n",
+    "new_table.loc[new_table['Report Country'].isnull(), 'Report Country'] = 'USA'\n",
+    "new_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tag No.</th>\n",
+       "      <th>Tag State</th>\n",
+       "      <th>Tag Date</th>\n",
+       "      <th>Report State</th>\n",
+       "      <th>Report Country</th>\n",
+       "      <th>Report Date</th>\n",
        "      <th>Miles</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1061,78 +1241,49 @@
        "</div>"
       ],
       "text/plain": [
-       "     Tag No. Tagged State Tagged Date Reported State Reported Country  \\\n",
-       "0     AAD929           MA  2001-09-12           MICH           MEXICO   \n",
-       "1     AAD844           MA  2001-09-12           MICH           MEXICO   \n",
-       "2     AIO261           NY  2001-09-24           MICH           MEXICO   \n",
-       "3     AAU820           NY  2001-08-29           MICH           MEXICO   \n",
-       "4     ABG581           NY  2001-09-16           MICH           MEXICO   \n",
-       "...      ...          ...         ...            ...              ...   \n",
-       "1957  ADE225          NaN         NaT             MN              USA   \n",
-       "1958  ABW153          NaN         NaT           MICH           MEXICO   \n",
-       "1959  AJA875          NaN         NaT           MICH           MEXICO   \n",
-       "1960  ADR234          NaN         NaT           MICH           MEXICO   \n",
-       "1961  AAG669          NaN         NaT             CT              USA   \n",
+       "     Tag No. Tag State   Tag Date Report State Report Country Report Date  \\\n",
+       "0     AAD929        MA 2001-09-12         MICH         MEXICO  2002-02-11   \n",
+       "1     AAD844        MA 2001-09-12         MICH         MEXICO  2002-03-08   \n",
+       "2     AIO261        NY 2001-09-24         MICH         MEXICO  2002-03-13   \n",
+       "3     AAU820        NY 2001-08-29         MICH         MEXICO  2002-02-27   \n",
+       "4     ABG581        NY 2001-09-16         MICH         MEXICO  2002-03-13   \n",
+       "...      ...       ...        ...          ...            ...         ...   \n",
+       "1957  ADE225       NaN        NaT           MN            USA  2001-10-06   \n",
+       "1958  ABW153       NaN        NaT         MICH         MEXICO  2002-03-08   \n",
+       "1959  AJA875       NaN        NaT         MICH         MEXICO  2002-02-26   \n",
+       "1960  ADR234       NaN        NaT         MICH         MEXICO  2002-02-26   \n",
+       "1961  AAG669       NaN        NaT           CT            USA  2001-09-16   \n",
        "\n",
-       "     Reported Date   Miles  \n",
-       "0       2002-02-11  2344.0  \n",
-       "1       2002-03-08  2343.0  \n",
-       "2       2002-03-13  2329.0  \n",
-       "3       2002-02-27  2315.0  \n",
-       "4       2002-03-13  2303.0  \n",
-       "...            ...     ...  \n",
-       "1957    2001-10-06     NaN  \n",
-       "1958    2002-03-08     NaN  \n",
-       "1959    2002-02-26     NaN  \n",
-       "1960    2002-02-26     NaN  \n",
-       "1961    2001-09-16     NaN  \n",
+       "       Miles  \n",
+       "0     2344.0  \n",
+       "1     2343.0  \n",
+       "2     2329.0  \n",
+       "3     2315.0  \n",
+       "4     2303.0  \n",
+       "...      ...  \n",
+       "1957     NaN  \n",
+       "1958     NaN  \n",
+       "1959     NaN  \n",
+       "1960     NaN  \n",
+       "1961     NaN  \n",
        "\n",
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_table.loc[new_table['Reported Country'] == 'MX', 'Reported Country'] = 'MEXICO'\n",
-    "new_table.loc[new_table['Reported Country'].isnull(), 'Reported Country'] = 'USA'\n",
+    "new_table[\"Tag Date\"]= pd.to_datetime(new_table[\"Tag Date\"]) \n",
+    "new_table[\"Report Date\"]= pd.to_datetime(new_table[\"Report Date\"]) \n",
     "new_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Tag No.                     object\n",
-       "Tagged State                object\n",
-       "Tagged Date         datetime64[ns]\n",
-       "Reported State              object\n",
-       "Reported Country            object\n",
-       "Reported Date       datetime64[ns]\n",
-       "Miles                      float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_table[\"Tagged Date\"]= pd.to_datetime(new_table[\"Tagged Date\"]) \n",
-    "new_table[\"Reported Date\"]= pd.to_datetime(new_table[\"Reported Date\"]) \n",
-    "new_table.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
